pcサイズ完了

--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -5,19 +5,19 @@ section#yuki.yuki
         .circle
           include ../../assets/img/svg/deco-circle-bg.svg
         figure 
-        .subhead
+        .subhead-1.active
           h3 Skills
           span 習得した魔法
-        .subhead
+        .subhead-2
           h3 Gear
           span 使用ツール
-        .subhead
+        .subhead-3
           h3 Strength
           span わたしの強み
       .chara
     .right
       .sticky-content
-        .slide-1
+        .slide-1.slide
           details
             summary
               figure.icon1
@@ -42,7 +42,7 @@ section#yuki.yuki
             .acc-text
               .inner
                 p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
-        .slide-2
+        .slide-2.slide
           p （直近１年間のツール使用期間）
           .tool
             .item
@@ -89,19 +89,19 @@ section#yuki.yuki
                     .fill
               p PrettierやEmmetなどの拡張機能でコード整形・入力を自動化し、作業の効率化とエラーを削減
         .slide-3
-          .item
+          .item-1.slide
             figure.bg-en1
             span 01
             .en LINK
             .ja 人の役に立つことが好き
             p 他者の役に立つことに喜びを感じ、「個人の力を超えてチームで成し遂げる」という信念のもと、周囲と協力して目標を達成することにやりがいを感じています。協力し合いながら一緒に成長できる環境でこそ最大の力を発揮します。
-          .item
+          .item-2.slide
             figure.bg-en2
             span 02
             .en FARM
             .ja 自分の能力を高める力
             p 目標に向かって努力し、継続的に自分を成長させる力を持っています。Web制作を学ぶ過程でも、限られた時間の中でスキルを磨き、着実に成果を上げました。
-          .item
+          .item-3.slide
             figure.bg-en3
             span 03
             .en CALM
