--- a/src/pug/about-me.pug
+++ b/src/pug/about-me.pug
@@ -15,6 +15,7 @@ block main
 
 block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js")
+  script(src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollToPlugin.min.js")
   script(src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js")
   script(src=`${pathToJS}common.js`)
   script(src=`${pathToJS}about-me.js`)
