--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -207,6 +207,7 @@
             gap: 0;
             width: fit-content;
             text-decoration: none;
+            color: var(--color-black);
 
             p {
               font-size: 45px;
