mdサイズスクロール完成

--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -17,6 +17,7 @@ section#yuki.yuki
       .chara
     .right
       .sticky-content
+        .chara-md
         .slide-1.slide
           details
             summary
