spサイズ試行錯誤中

--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -5,20 +5,30 @@ section#yuki.yuki
         .circle
           include ../../assets/img/svg/deco-circle-bg.svg
         figure 
-        .subhead-1.active
-          h3 Skills
-          span 習得した魔法
-        .subhead-2
-          h3 Gear
-          span 使用ツール
-        .subhead-3
-          h3 Strength
-          span わたしの強み
-      .chara
+        .head-top
+          ul
+            li.subhead-1.active
+              h3 Skills
+              span 習得した魔法
+            li.subhead-2
+              h3 Gear
+              span 使用ツール
+            li.subhead-3
+              h3 Strength
+              span わたしの強み
+          .dots
+            span.dot-1.active
+            span.dot-2
+            span.dot-3
+      .bg-cont
+        figure.chara
+        figure.bg-en1
+        figure.bg-en2
+        figure.bg-en3
     .right
       .sticky-content
-        .chara-md
-        .slide-1.slide
+        figure.chara-md
+        .slide-1.slide.active
           details
             summary
               figure.icon1
