--- a/src/sass/about-me/yuki-takatsu.scss
+++ b/src/sass/about-me/yuki-takatsu.scss
@@ -16,11 +16,20 @@
   padding-inline: 108px;
   margin-bottom: 200px;
 
+  @include mq.sm {
+    padding-inline: 0px;
+    margin-bottom: 60px;
+  }
+
   .inner {
     display: flex;
     width: 100%;
     max-width: 1224px;
     margin: 0 auto;
+
+    @include mq.sm {
+      flex-direction: column;
+    }
 
     .left {
       position: sticky;
@@ -29,14 +38,32 @@
       flex-grow: 1;
       height: 600px;
 
+      @include mq.sm {
+        display: contents;
+        flex-direction: column;
+        top: 60px;
+        height: auto;
+      }
+
       .head {
-        position: relative;
-        z-index: 1;
+        z-index: 2;
         flex-grow: 1;
         margin-right: 30px;
+        background-color: var(--color-white);
+        position: relative;
+        z-index: 0;
 
         @include mq.md {
           margin-right: 60px;
+        }
+        @include mq.sm {
+          position: sticky;
+          top: 0;
+          margin: 0;
+          height: 92px;
+          padding: 60px 24px 20px;
+          flex-shrink: 0;
+          z-index: 2;
         }
 
         .circle {
@@ -51,6 +78,10 @@
             translate: -80% -40%;
           }
 
+          @include mq.sm {
+            display: none;
+          }
+
           svg {
             width: 100%;
             max-width: 100%;
@@ -63,88 +94,185 @@
           @include path.bg-img("/svg/img-name.svg");
           width: 100%;
           aspect-ratio: 349 / 51;
-          margin-bottom: vw.lg(30);
-        }
+          margin-bottom: 30px;
 
-        [class^="subhead"] {
-          position: relative;
-          z-index: 1;
-          box-sizing: border-box;
-          display: block;
-          width: auto;
-          padding: 10px 0 10px 30px;
-          margin-bottom: vw.lg(10);
-          color: #979795;
-          text-decoration: none;
-          cursor: pointer;
-          border-left: 6px solid #979795;
-          transition: 0.3s ease.$custom1;
-
-          &::before {
-            z-index: -1;
-            width: 100%;
-            height: 100%;
-            clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
-            content: "";
-            background: linear-gradient(
-              90deg,
-              rgb(146 213 229 / 100%) 0%,
-              rgb(198 230 225 / 100%) 75%,
-              rgb(233 209 213 / 10%) 95%,
-              rgb(233 209 213 / 0%) 100%
-            );
-            transition: 0.3s ease.$custom1;
-
-            @include geom.abs(0, 0);
-          }
-
-          h3 {
-            @include typography.en-regular;
-            margin-bottom: 5px;
-            font-size: 40px;
-            line-height: 1;
-          }
-
-          span {
-            @include typography.zen-regular;
-            font-size: 16px;
+          @include mq.sm {
+            width: 100px;
+            margin-bottom: 15px;
           }
         }
+        .head-top {
+          @include mq.sm {
+            display: flex;
+            justify-content: space-between;
+          }
 
-        .active {
-          color: var(--color-white);
-          border-left: 6px solid var(--color-blue);
-          transition: 0.3 ease.$custom1;
+          ul {
+            @include mq.sm {
+              position: relative;
+              width: 90%;
+            }
+            [class^="subhead"] {
+              position: relative;
+              z-index: 1;
+              box-sizing: border-box;
+              display: block;
+              width: auto;
+              padding: 10px 0 10px 30px;
+              margin-bottom: 10px;
+              color: #979795;
+              text-decoration: none;
+              cursor: pointer;
+              border-left: 6px solid #979795;
+              transition: 0.3s ease.$custom1;
 
-          &::before {
-            clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+              @include mq.sm {
+                @include geom.abs();
+                display: flex;
+                align-items: flex-end;
+                gap: 10px;
+                opacity: 0;
+                margin-bottom: 0;
+                width: 100%;
+                padding: 10px 0 13px 10px;
+                border-left: 5px solid #979795;
+              }
+
+              &::before {
+                @include geom.abs(0, 0);
+                z-index: -1;
+                width: 100%;
+                height: 100%;
+                clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+                content: "";
+                background: linear-gradient(
+                  90deg,
+                  rgb(146 213 229 / 100%) 0%,
+                  rgb(198 230 225 / 100%) 75%,
+                  rgb(233 209 213 / 10%) 95%,
+                  rgb(233 209 213 / 0%) 100%
+                );
+                transition: 0.3s ease.$custom1;
+
+                @include mq.sm {
+                  clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+                }
+              }
+              h3 {
+                @include typography.en-regular;
+                margin-bottom: 5px;
+                font-size: 40px;
+                line-height: 1;
+
+                @include mq.sm {
+                  margin-bottom: 0;
+                }
+              }
+
+              span {
+                @include typography.zen-regular;
+                font-size: 16px;
+
+                @include mq.sm {
+                  font-size: 12px;
+                }
+              }
+            }
+
+            [class^="subhead"].active {
+              color: var(--color-white);
+              border-left: 6px solid var(--color-blue);
+              transition: 0.3 ease.$custom1;
+
+              @include mq.sm {
+                opacity: 1;
+                border-left: 5px solid var(--color-blue);
+              }
+
+              &::before {
+                clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+              }
+            }
+          }
+          .dots {
+            flex-direction: column;
+            height: 60px;
+            align-items: center;
+            justify-content: space-between;
+            display: none;
+
+            span {
+              @include geom.sq(15px);
+              background-color: var(--color-hr);
+              clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+            }
+            .active {
+              background-color: var(--color-blue);
+            }
+
+            @include mq.sm {
+              display: flex;
+            }
           }
         }
       }
-
-      .chara {
-        @include path.bg-img("/top/img-aboutme-character.png");
+      .bg-cont {
         position: relative;
         z-index: 1;
-        box-sizing: border-box;
-        flex-shrink: 0;
-        width: 370px;
-        height: 600px;
-        margin-right: 30px;
-        background-position: center;
 
-        @include mq.md {
-          display: none;
+        @include mq.sm {
+          position: sticky;
+          top: 172px;
+          width: 100%;
+
+          margin-bottom: 20px;
         }
 
-        // &::before {
-        //   @include geom.abs(0, 0);
-        //   z-index: -1;
-        //   width: 100%;
-        //   height: 100%;
-        //   content: "";
-        //   background-color: var(--color-blue);
-        // }
+        .chara {
+          @include path.bg-img("/top/img-aboutme-character.png");
+          z-index: 1;
+          box-sizing: border-box;
+          flex-shrink: 0;
+          width: 370px;
+          height: 600px;
+          margin-right: 30px;
+          background-position: center;
+
+          @include mq.md {
+            display: none;
+          }
+
+          @include mq.sm {
+            height: 440px;
+            opacity: 1;
+          }
+          // &::before {
+          //   @include geom.abs(0, 0);
+          //   z-index: -1;
+          //   width: 100%;
+          //   height: 100%;
+          //   content: "";
+          //   background-color: var(--color-blue);
+          // }
+        }
+        [class^="bg-en"] {
+          @include geom.abs(0, 0);
+          width: 100%;
+          aspect-ratio: 570 / 156;
+          top: 50%;
+          transform: translateY(-50%);
+          opacity: 0;
+          transition: 0.3s ease;
+        }
+        .bg-en1 {
+          @include path.bg-img("about-me/img-en-1.svg");
+        }
+        .bg-en2 {
+          @include path.bg-img("about-me/img-en-2.svg");
+        }
+        .bg-en3 {
+          @include path.bg-img("about-me/img-en-3.svg");
+        }
       }
     }
 
@@ -153,9 +281,15 @@
       z-index: 1;
       width: 35%;
       height: calc(600px * 5);
+      box-sizing: border-box;
 
       @include mq.md {
         width: 50%;
+      }
+      @include mq.sm {
+        width: 100%;
+        padding-inline: 24px;
+        height: auto;
       }
       // background: linear-gradient(
       //   0deg,
@@ -176,16 +310,21 @@
         width: 100%;
         height: 600px;
 
+        @include mq.sm {
+          position: static;
+          height: auto;
+        }
+
         .chara-md {
           @include mq.md {
-            @include geom.abs();
+            @include geom.abs;
             @include path.bg-img("/top/img-aboutme-character.png");
-            content: "";
             width: 100%;
             height: 100%;
+            content: "";
+            background-position: center;
             opacity: 1;
             transition: 0.1s ease;
-            background-position: center;
           }
         }
 
@@ -193,12 +332,21 @@
           @include geom.abs;
           box-sizing: border-box;
           width: 100%;
+
+          @include mq.sm {
+            position: static;
+          }
         }
 
         .slide {
           visibility: hidden;
           opacity: 0;
           transition: 0.3s ease;
+
+          @include mq.sm {
+            opacity: 1;
+            visibility: visible;
+          }
         }
 
         .active {
@@ -219,6 +367,11 @@
             background-color: var(--color-gold);
           }
 
+          @include mq.sm {
+            height: auto;
+            padding-bottom: 60px;
+          }
+
           details {
             border-bottom: solid 1px var(--color-hr);
 
@@ -237,30 +390,51 @@
                 @include path.bg-img("/common/img-skills-1.png");
                 @include geom.sq(90px);
                 margin-right: 25px;
+
+                @include mq.sm {
+                  @include geom.sq(60px);
+                  margin-right: 20px;
+                }
               }
 
               .icon2 {
                 @include path.bg-img("/common/img-skills-2.png");
                 @include geom.sq(90px);
                 margin-right: 25px;
+                @include mq.sm {
+                  @include geom.sq(60px);
+                  margin-right: 20px;
+                }
               }
 
               .icon3 {
                 @include path.bg-img("/common/img-skills-3.png");
                 @include geom.sq(90px);
                 margin-right: 25px;
+                @include mq.sm {
+                  @include geom.sq(60px);
+                  margin-right: 20px;
+                }
               }
 
               p {
                 @include typography.zen-regular;
                 margin-right: auto;
                 font-size: 20px;
+
+                @include mq.sm {
+                  font-size: 16px;
+                }
               }
 
               span {
                 @include geom.sq(34px);
                 position: relative;
                 display: block;
+
+                @include mq.sm {
+                  @include geom.sq(20px);
+                }
 
                 &::before,
                 &::after {
@@ -272,6 +446,10 @@
                   background-color: var(--color-gold);
                   transition: 0.5s ease.$custom1;
                   transform-origin: center;
+
+                  @include mq.sm {
+                    height: 2px;
+                  }
                 }
 
                 &::before {
@@ -289,6 +467,12 @@
               display: grid;
               font-size: 16px;
               transition: 0.5s ease;
+              line-height: 2;
+
+              @include mq.sm {
+                font-size: 13px;
+                margin-left: 80px;
+              }
 
               .inner {
                 overflow: hidden;
@@ -296,6 +480,10 @@
                 p {
                   padding-bottom: 10px;
                   margin-right: 10px;
+
+                  @include mq.sm {
+                    padding-bottom: 20px;
+                  }
                 }
               }
             }
@@ -316,6 +504,11 @@
           @include typography.zen-regular;
           height: 600px;
           overflow: auto;
+
+          @include mq.sm {
+            height: auto;
+            padding-bottom: 60px;
+          }
 
           .tool {
             display: flex;
@@ -338,6 +531,10 @@
                 figure {
                   @include geom.sq(55px);
                   flex-shrink: 0;
+
+                  @include mq.sm {
+                    @include geom.sq(45px);
+                  }
                 }
 
                 .item1 {
@@ -368,10 +565,6 @@
                     justify-content: space-between;
                     font-size: 16px;
                     color: #8f8e8d;
-
-                    @include mq.sm {
-                      font-size: 13px;
-                    }
                   }
 
                   .bar {
@@ -391,6 +584,12 @@
                       border-radius: 100px;
                     }
                   }
+                }
+              }
+              & > p {
+                line-height: 2;
+                @include mq.sm {
+                  font-size: 13px;
                 }
               }
             }
@@ -413,14 +612,24 @@
             justify-content: center;
             height: 600px;
 
+            @include mq.sm {
+              width: 82%;
+              position: static;
+              height: auto;
+              margin-bottom: 60px;
+            }
+
             figure {
               @include geom.abs(-30px, 20%);
               @include typography.en-regular;
               z-index: 0;
               width: calc(110% + 108px);
               aspect-ratio: 570 / 156;
-              font-size: 200px;
               object-position: right;
+
+              @include mq.sm {
+                display: none;
+              }
             }
 
             .bg-en1 {
@@ -451,7 +660,21 @@
               position: relative;
               z-index: 1;
               font-size: 20px;
+
+              @include mq.sm {
+                font-size: 16px;
+              }
             }
+            p {
+              line-height: 2;
+
+              @include mq.sm {
+                font-size: 13px;
+              }
+            }
+          }
+          .item-2 {
+            margin-left: auto;
           }
         }
       }
