--- a/src/sass/about-me/yuki-takatsu.scss
+++ b/src/sass/about-me/yuki-takatsu.scss
@@ -17,8 +17,8 @@
   margin-bottom: 200px;
 
   @include mq.sm {
-    padding-inline: 0px;
-    margin-bottom: 60px;
+    padding-inline: 0;
+    margin-bottom: 200px;
   }
 
   .inner {
@@ -39,31 +39,29 @@
       height: 600px;
 
       @include mq.sm {
+        top: 60px;
         display: contents;
         flex-direction: column;
-        top: 60px;
         height: auto;
       }
 
       .head {
-        z-index: 2;
+        position: relative;
+        z-index: 0;
         flex-grow: 1;
         margin-right: 30px;
         background-color: var(--color-white);
-        position: relative;
-        z-index: 0;
 
         @include mq.md {
           margin-right: 60px;
         }
         @include mq.sm {
-          position: sticky;
           top: 0;
-          margin: 0;
+          z-index: 2;
+          flex-shrink: 0;
           height: 92px;
           padding: 60px 24px 20px;
-          flex-shrink: 0;
-          z-index: 2;
+          margin: 0;
         }
 
         .circle {
@@ -77,7 +75,6 @@
           @include mq.md {
             translate: -80% -40%;
           }
-
           @include mq.sm {
             display: none;
           }
@@ -101,6 +98,7 @@
             margin-bottom: 15px;
           }
         }
+
         .head-top {
           @include mq.sm {
             display: flex;
@@ -112,6 +110,7 @@
               position: relative;
               width: 90%;
             }
+
             [class^="subhead"] {
               position: relative;
               z-index: 1;
@@ -127,15 +126,15 @@
               transition: 0.3s ease.$custom1;
 
               @include mq.sm {
-                @include geom.abs();
+                @include geom.abs;
                 display: flex;
-                align-items: flex-end;
                 gap: 10px;
-                opacity: 0;
-                margin-bottom: 0;
+                align-items: flex-end;
                 width: 100%;
                 padding: 10px 0 13px 10px;
+                margin-bottom: 0;
                 border-left: 5px solid #979795;
+                opacity: 0;
               }
 
               &::before {
@@ -158,6 +157,7 @@
                   clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
                 }
               }
+
               h3 {
                 @include typography.en-regular;
                 margin-bottom: 5px;
@@ -185,8 +185,8 @@
               transition: 0.3 ease.$custom1;
 
               @include mq.sm {
-                opacity: 1;
                 border-left: 5px solid var(--color-blue);
+                opacity: 1;
               }
 
               &::before {
@@ -194,18 +194,21 @@
               }
             }
           }
+
           .dots {
+            display: none;
             flex-direction: column;
-            height: 60px;
             align-items: center;
             justify-content: space-between;
-            display: none;
+            height: 60px;
 
             span {
               @include geom.sq(15px);
-              background-color: var(--color-hr);
               clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+              background-color: var(--color-hr);
+              transition: 0.3s ease;
             }
+
             .active {
               background-color: var(--color-blue);
             }
@@ -216,15 +219,13 @@
           }
         }
       }
+
       .bg-cont {
         position: relative;
         z-index: 1;
 
         @include mq.sm {
-          position: sticky;
-          top: 172px;
           width: 100%;
-
           margin-bottom: 20px;
         }
 
@@ -241,8 +242,8 @@
           @include mq.md {
             display: none;
           }
-
           @include mq.sm {
+            width: 100%;
             height: 440px;
             opacity: 1;
           }
@@ -255,21 +256,26 @@
           //   background-color: var(--color-blue);
           // }
         }
+
         [class^="bg-en"] {
           @include geom.abs(0, 0);
+          top: 50%;
           width: 100%;
           aspect-ratio: 570 / 156;
-          top: 50%;
-          transform: translateY(-50%);
+          object-position: center;
           opacity: 0;
           transition: 0.3s ease;
+          transform: translateY(-50%);
         }
+
         .bg-en1 {
-          @include path.bg-img("about-me/img-en-1.svg");
+          @include path.bg-img("about-me/img-en-1.svg", cover);
         }
+
         .bg-en2 {
           @include path.bg-img("about-me/img-en-2.svg");
         }
+
         .bg-en3 {
           @include path.bg-img("about-me/img-en-3.svg");
         }
@@ -279,17 +285,17 @@
     .right {
       position: relative;
       z-index: 1;
+      box-sizing: border-box;
       width: 35%;
       height: calc(600px * 5);
-      box-sizing: border-box;
 
       @include mq.md {
         width: 50%;
       }
       @include mq.sm {
         width: 100%;
-        padding-inline: 24px;
         height: auto;
+        padding-inline: 24px;
       }
       // background: linear-gradient(
       //   0deg,
@@ -344,8 +350,8 @@
           transition: 0.3s ease;
 
           @include mq.sm {
-            opacity: 1;
             visibility: visible;
+            opacity: 1;
           }
         }
 
@@ -369,7 +375,6 @@
 
           @include mq.sm {
             height: auto;
-            padding-bottom: 60px;
           }
 
           details {
@@ -401,6 +406,7 @@
                 @include path.bg-img("/common/img-skills-2.png");
                 @include geom.sq(90px);
                 margin-right: 25px;
+
                 @include mq.sm {
                   @include geom.sq(60px);
                   margin-right: 20px;
@@ -411,6 +417,7 @@
                 @include path.bg-img("/common/img-skills-3.png");
                 @include geom.sq(90px);
                 margin-right: 25px;
+
                 @include mq.sm {
                   @include geom.sq(60px);
                   margin-right: 20px;
@@ -466,12 +473,12 @@
               @include typography.zen-regular;
               display: grid;
               font-size: 16px;
-              transition: 0.5s ease;
               line-height: 2;
+              transition: 0.5s ease;
 
               @include mq.sm {
-                font-size: 13px;
                 margin-left: 80px;
+                font-size: 13px;
               }
 
               .inner {
@@ -507,7 +514,7 @@
 
           @include mq.sm {
             height: auto;
-            padding-bottom: 60px;
+            padding-top: 60px;
           }
 
           .tool {
@@ -519,6 +526,7 @@
 
             .item {
               margin: 20px 0;
+              width: 100%;
 
               .content {
                 display: flex;
@@ -586,8 +594,10 @@
                   }
                 }
               }
+
               & > p {
                 line-height: 2;
+
                 @include mq.sm {
                   font-size: 13px;
                 }
@@ -613,10 +623,10 @@
             height: 600px;
 
             @include mq.sm {
-              width: 82%;
               position: static;
+              width: 82%;
               height: auto;
-              margin-bottom: 60px;
+              padding-top: 100px;
             }
 
             figure {
@@ -665,6 +675,7 @@
                 font-size: 16px;
               }
             }
+
             p {
               line-height: 2;
 
@@ -673,6 +684,7 @@
               }
             }
           }
+
           .item-2 {
             margin-left: auto;
           }
