biography スタイル中

--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -22,6 +22,8 @@ block vars
   var pathToCSS = pathToAssets + 'css/';
   var pathToLibs = pathToAssets + 'libs/';
   var pathToSVG = pathToAssets + 'images/svg/';
+  var pathToImgAboutMe = pathToAssets + 'images/about-me/';
+  var pathToImgWorks = pathToAssets + 'images/works/';
   var pathToImgLG = pathToAssets + 'images/lg/';
   var pathToImgMD = pathToAssets + 'images/md/';
   var pathToImgSM = pathToAssets + 'images/sm/';
