--- a/src/sass/about-me/biography.scss
+++ b/src/sass/about-me/biography.scss
@@ -10,8 +10,8 @@
 @use "../_include/geom";
 
 .biography {
-  margin-bottom: 200px;
   padding-inline: 108px;
+  margin-bottom: 200px;
 
   .inner {
     max-width: 1224px;
@@ -19,18 +19,21 @@
 
     .head {
       margin-bottom: 50px;
+
       h2 {
         @include typography.en-regular;
-        font-size: 92px;
         margin-bottom: 35px;
+        font-size: 92px;
         line-height: 1;
       }
+
       p {
         @include typography.zen-regular;
         font-size: 16px;
         line-height: 1;
       }
     }
+
     .timeline {
       display: flex;
       gap: 50px;
@@ -46,6 +49,12 @@
         li {
           cursor: pointer;
 
+          &:hover {
+            .img::before {
+              opacity: 0;
+            }
+          }
+
           &.active {
             .img::before {
               opacity: 0;
@@ -56,22 +65,22 @@
             @include geom.sq(100px);
             position: relative;
             box-sizing: border-box;
-            border-radius: 50%;
-            border: solid 1px var(--color-gold);
-            padding: 3px;
             display: grid;
             place-items: center;
+            padding: 3px;
             margin-bottom: 10px;
+            border: solid 1px var(--color-gold);
+            border-radius: 50%;
 
             &::before,
             &::after {
               position: absolute;
-              content: "";
               display: block;
               width: 5px;
               height: 6px;
-              background-color: var(--color-gold);
               clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+              content: "";
+              background-color: var(--color-gold);
             }
 
             &::before {
@@ -79,6 +88,7 @@
               left: 50%;
               transform: translateX(-50%);
             }
+
             &::after {
               bottom: -4px;
               left: 50%;
@@ -91,29 +101,30 @@
               width: 100%;
               height: 100%;
               aspect-ratio: 1/1;
-              border-radius: 50%;
-              border: solid 1px var(--color-gold);
               overflow: hidden;
+              border: solid 1px var(--color-gold);
+              border-radius: 50%;
 
               &::before {
                 @include geom.abs;
-                content: "";
                 display: block;
                 width: 100%;
                 height: 100%;
                 aspect-ratio: 1/1;
-                transition: 0.3 ease.$custom1;
-                background-color: rgba($color: #122234, $alpha: 0.3);
+                content: "";
+                background-color: rgba($color: #122234, $alpha: 30%);
+                transition: 0.3s ease.$custom1;
               }
 
               img {
                 width: 100%;
-                height: 100%;
                 max-width: 100%;
+                height: 100%;
                 max-height: 100%;
               }
             }
           }
+
           span {
             @include typography.zen-regular;
             font-size: 16px;
@@ -121,40 +132,49 @@
           }
         }
       }
-      .content {
+
+      .slide-items {
         position: relative;
         width: 70%;
+
         li {
-          @include geom.abs();
-          width: 100%;
+          @include geom.abs;
           box-sizing: border-box;
-          border-radius: 0 60px 0 0;
-          border: solid 2px var(--color-gold);
+          width: 100%;
           max-width: 864px;
           padding: 10px;
           background-color: var(--color-white);
-          transform: translateY(-50%);
+          border: solid 2px var(--color-gold);
+          border-radius: 0 60px 0 0;
+          translate: -20px -50%;
+          transition: 1s ease.$custom1;
+          visibility: hidden;
+          opacity: 0;
 
-          &::before {
+          &.active {
+            opacity: 1;
+            visibility: visible;
+            translate: 0 -50%;
           }
+
           .border {
             box-sizing: border-box;
             display: flex;
-            border: solid 1px var(--color-gold);
-            border-radius: 0 50px 0 0;
             justify-content: space-between;
             overflow: hidden;
+            border: solid 1px var(--color-gold);
+            border-radius: 0 50px 0 0;
 
             .text {
               @include typography.zen-regular;
               box-sizing: border-box;
-              line-height: 2;
-              width: 46%;
-              text-align: center;
-              padding: 40px 0 40px 40px;
               display: flex;
               flex-direction: column;
               gap: 20px;
+              width: 46%;
+              padding: 40px 0 40px 40px;
+              line-height: 2;
+              text-align: center;
 
               span {
                 @include typography.en-regular;
@@ -171,18 +191,24 @@
                   font-size: 50px;
                   font-weight: 400;
                 }
+
+                span {
+                  font-size: 30px;
+                }
               }
 
               .left {
                 text-align: left;
               }
             }
+
             .img {
               width: 51%;
+
               img {
                 width: 100%;
-                height: 100%;
                 max-width: 100%;
+                height: 100%;
                 max-height: 100%;
                 object-fit: contain;
               }
