--- a/src/sass/about-me/yuki-takatsu.scss
+++ b/src/sass/about-me/yuki-takatsu.scss
@@ -69,6 +69,7 @@
           @include geom.abs(50%, 34%);
           z-index: 0;
           opacity: 0;
+          visibility: hidden;
           transform-origin: center;
           translate: -50% -50%;
 
