--- a/src/sass/top/introduction.scss
+++ b/src/sass/top/introduction.scss
@@ -12,6 +12,10 @@
 .introduction {
   width: 100%;
 
+  @include mq.md {
+    margin-top: 100px;
+  }
+
   .inner {
     position: relative;
     padding: 0 108px 200px;
@@ -24,8 +28,9 @@
       display: flex;
       flex-direction: column;
       gap: 40px;
-      margin-bottom: 100px;
+      margin: 0 auto 100px;
       color: var(--color-gold);
+      width: fit-content;
 
       @include mq.sm {
         gap: 10px;
@@ -36,6 +41,7 @@
         @include typography.en-regular;
         font-size: 70px;
         line-height: 1;
+        width: fit-content;
 
         @include mq.sm {
           font-size: 30px;
@@ -45,6 +51,7 @@
       p {
         @include typography.zen-regular;
         font-size: 20px;
+        width: fit-content;
 
         @include mq.sm {
           font-size: 12px;
@@ -53,7 +60,8 @@
     }
 
     .text {
-      max-width: 842px;
+      max-width: 740px;
+      margin: 0 auto;
 
       @include mq.sm {
         width: 340px;
