--- a/src/pug/about-me/biography.pug
+++ b/src/pug/about-me/biography.pug
@@ -40,7 +40,7 @@ section#biography.biography
                 span Lv.19
               .hr
               p 特性：創造力<br>武器：エンチャントデジタルペン
-              p.left クリエイティブな仕事への憧れを抱きつつ、管理栄養士の資格を取得する堅実な選択を進んだ。プライベートでは趣味のイラスト制作に全力を注ぎ、同人誌即売会への参加を通じながら、自己表現と発信力を磨き続けた。この経験が、自身の創造力を大きく広げた。
+              p.left クリエイティブな仕事への憧れを抱きつつ、管理栄養士の資格を取得する堅実な選択を進んだ。プライベートでは趣味のイラスト制作に全力を注ぎ、同人誌即売会への参加を通じながら、自己表現と発信力を磨き続けた。
             .img
               img(src=`${pathToImgAboutMe}img-biography-2.webp`, alt="大学時代のイラスト")
         li
