--- a/src/sass/about-me/about-me-top.scss
+++ b/src/sass/about-me/about-me-top.scss
@@ -44,7 +44,7 @@
         width: 100%;
       }
       @include mq.sm {
-        padding: 50px 0 0 0px;
+        padding: 50px 0 0;
       }
 
       .circle {
