--- a/src/pug/top/fv.pug
+++ b/src/pug/top/fv.pug
@@ -1,4 +1,4 @@
-section.fv
+section#fv.fv
   .inner
     .bg
       .left
@@ -12,4 +12,4 @@ section.fv
         h1 Welcome to<br class="no-md"> My portfolio site
         p Takatsu Yuki portfolio site
       .character
-        a.circle(href="#")
+        a.circle(href="/works-list/")
