--- a/src/sass/works-list/works-item.scss
+++ b/src/sass/works-list/works-item.scss
@@ -57,6 +57,7 @@
         display: block;
         width: 100%;
         text-decoration: none;
+        color: var(--black);
 
         &:hover {
           .img-works {
