--- a/src/pug/_include/footer.pug
+++ b/src/pug/_include/footer.pug
@@ -2,7 +2,8 @@ footer.global-footer
   .bg
   .inner
     p 新たな冒険を共にする準備をする
-    a.contact(href="mailto:neveyk33@gmail.com", aria-label="Contact")
+    p.mail yk.neve@gmail.com
+    a.contact(href="mailto:yk.neve@gmail.com", aria-label="Contact")
       include ../../assets/img/svg/icon-mail.svg
       .split-text Contact
     .pc-content
