--- a/src/sass/works-base/top.scss
+++ b/src/sass/works-base/top.scss
@@ -33,13 +33,13 @@
 
       video {
         position: relative;
+        z-index: 0;
         width: 100%;
         max-width: 100%;
         height: 100%;
         max-height: 100%;
         object-fit: cover;
         object-position: top;
-        z-index: 0;
       }
 
       img {
@@ -52,25 +52,25 @@
       }
 
       &::before {
-        content: "";
         position: absolute;
+        z-index: 1;
         display: block;
         width: 100%;
         height: 100%;
-        background-color: rgba($color: #000, $alpha: 0.5);
-        z-index: 1;
+        content: "";
+        background-color: rgba($color: #000000, $alpha: 50%);
       }
     }
 
     .text {
       @include typography.zen-regular;
-      box-sizing: border-box;
       position: relative;
       z-index: 1;
-      height: 100%;
+      box-sizing: border-box;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      height: 100%;
       padding: 100px 108px;
 
       @include mq.sm {
@@ -89,13 +89,13 @@
         }
 
         h1 {
-          font-size: 50px;
           margin-bottom: 5px;
+          font-size: 50px;
           font-weight: 400;
 
           @include mq.sm {
-            font-size: 20px;
             margin-bottom: 20px;
+            font-size: 20px;
           }
 
           .no-lg {
@@ -109,12 +109,13 @@
 
         .link {
           display: flex;
-          align-items: center;
           gap: 10px;
-          color: var(--color-white);
-          text-decoration: none;
+          align-items: center;
           width: fit-content;
           line-height: 2;
+          color: var(--color-white);
+          text-decoration: none;
+
           figure {
             @include path.bg-img("svg/icon-link.svg");
             @include geom.sq(20px);
