--- a/src/sass/works-list/works-item.scss
+++ b/src/sass/works-list/works-item.scss
@@ -19,8 +19,9 @@
   .text {
     position: relative;
     box-sizing: border-box;
-    width: 57%;
     padding: 80px 0 0 30px;
+    margin: 0 auto;
+    max-width: 1224px;
 
     @include mq.md-sm {
       width: 100%;
@@ -76,9 +77,9 @@
       span {
         @include typography.zen-regular;
         display: block;
+        margin-left: 7px;
         font-size: 30px;
         color: #92d5e5;
-        margin-left: 7px;
 
         @include mq.sm {
           font-size: 12px;
@@ -163,17 +164,16 @@
           }
 
           .img-works {
-            padding: 5px;
             position: relative;
             z-index: 1;
             box-sizing: border-box;
             width: 100%;
             max-width: 100%;
             height: 100%;
-            max-width: 100%;
+            padding: 5px;
+            background-color: var(--color-white);
             border: solid 1px var(--color-gold);
             border-radius: 0 35px 0 0;
-            background-color: var(--color-white);
             transition: 0.3s ease.$custom1;
 
             figure {
@@ -182,10 +182,10 @@
               max-width: 100%;
               height: 100%;
               max-height: 100%;
-              border-radius: 0 30px 0 0;
-              background-position: top center;
               overflow: hidden;
+              background-position: top center;
               border: solid 1px var(--color-gold);
+              border-radius: 0 30px 0 0;
             }
           }
 
@@ -205,8 +205,8 @@
             display: block;
             width: 100%;
             height: 100%;
-            border-radius: 0 35px 0 0;
             content: "";
+            border-radius: 0 35px 0 0;
 
             @include path.bg-img("works/img-works-bg.jpg", cover);
           }
