--- a/src/sass/main/footer.scss
+++ b/src/sass/main/footer.scss
@@ -43,6 +43,7 @@
       text-align: center;
 
       @include mq.sm {
+        margin-bottom: 0;
         font-size: 16px;
       }
     }
@@ -53,6 +54,7 @@
       font-size: 20px;
 
       @include mq.sm {
+        margin-bottom: 20px;
         font-size: 16px;
       }
     }
