--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -54,8 +54,10 @@
       p {
         position: absolute;
         bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
         display: block;
-        width: 100%;
+        width: fit-content;
         text-align: center;
         letter-spacing: 0;
         opacity: 0;
@@ -115,12 +117,12 @@
     width: 100%;
     height: 100%;
     visibility: hidden;
-    backdrop-filter: blur(0);
     transition: 0.3s ease.$custom1;
 
     &.active {
       visibility: visible;
       backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px);
 
       .inner {
         transform: translateX(0);
@@ -145,6 +147,7 @@
       transform: translateX(100%);
 
       @include mq.sm {
+        width: 100%;
         inset: 0;
       }
 
@@ -237,6 +240,9 @@
       }
 
       a {
+        width: 50px;
+        height: 50px;
+
         svg {
           width: 100%;
           height: 100%;
